--- a/index.html
+++ b/index.html
@@ -52,7 +52,17 @@
     
     <div class="heading1">IT Project Idea
     </div>
+    <div class="heading2">Scaling Vertical-Scrolling Shooter
+    </div>
     <div class="body1">
+    &emsp;<strong>Overview:</strong> I have an idea regarding a vertical scrolling shooting gmae ala DonPachi or Raiden, where the player controls an avatar on a screen to shoot and destroy enemies while avoiding being hit.  The key difference I intended was to slowly increase the scale of the game over time, with character progression as well as expanding the field of view by increasing zoom to accomodate increasing range and abilities as the game progresses.  
+    <br>&emsp;<strong>Motivation:</strong> I have always wondered if RPG-like progression with scaling characters could be combined successfully with the vertical-scroller genre as I have not seen such done before.  The two genres often do not marry well together as increasing complexity and abilities of character progression does not represent well on a more visual game like a vertical-scoller.  However, I believe that by manipulating the zoom (and possibly the physics time-factor), this can be achieved.  
+    <br>&emsp;<strong>Description:</strong> A vertical scroller shooting game involves the player controlling an avatar (usually a sprite) that moves over a 2D visual field.  Enemies appear on the field that present threats the player will have to avoid or destroy with the avatar's weapons.  Keyboard controls the avatar's movements as well as menu selections.  
+    <br>&emsp;Each "stage" corresponds to a scripted (or generated) series of enemies and obstacles, at the end of each "stage", the player is provided with advancement and game options before continuing on to the next.  
+    <br>&emsp;The primary innovation involved a time and space zoom function.  Key controls to zoom out or in around the avatar changes the field of view, time controls to speed up or slow down the simulation tick rate; these functions are limited by character progression.  
+    <br>&emsp;<strong>Tools and Technologies:</strong> While undecided, I believe this can be developed on Unity, although I haven't worked with the platform before.  
+    <br>&emsp;<strong>Skills:</strong> Programming skills and familiarity with Unity will be required at a minimum for this project.  
+    <br>&emsp;<strong>Outcome:</strong> A successful development should result in the framework with a proof of concept of each of the features described.  
     </div>
     <div></div>
     
