--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
     
-    <div class="title">IIT Assignment 1
+    <div class="title"><strong>IIT Assignment 1</strong>
     </div>
     <div class="body1">
     <a href="https://github.com/s3740073/s3740073.github.io">Github Repo</a>
