--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     &emsp;Jonathan Seah
     <br>&emsp;S3740073
     <br>&emsp;s3740073@student.rmit.edu.au
+    <br><img src="photo.jpg" alt="Personal Photo">
     </div>
     <div></div>
     <hr>
