--- a/index.html
+++ b/index.html
@@ -1,7 +1,23 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <link rel="stylesheet" href="index.css">
+    <style>
+        title {
+            font-size: 16px;
+            text-decoration: underline;
+            text-align: center;
+        }
+        heading1 {
+            font-size: 14px;
+            text-decoration: underline;
+        }
+        heading2 {
+            font-size: 14px;
+        }
+        body1 {
+            font-size: 12px;
+        }
+    </style>
     </head>
     <body>
     
