--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <div class="heading1">Ideal Job
     </div>
     <div class="body1">
+    <br><img src="Capture.png" alt="Job Advertisement">
     &emsp;<a href="https://www.seek.com.au/job/51072013?type=promoted#searchRequestToken=f5a28738-473f-4f4a-baaf-99e16fc7af48">Software Engineer</a>
     <br>&emsp;My ideal job would be a software engineer developing critical software to analyse data on a large scale.  In particular, machine learning problems have recently seen great advances and are a hot field of explorations to be tapped.  
     <br>&emsp;The position requires strong programming skills, working with cloud technologies and machine learning skills.  
