--- a/index.html
+++ b/index.html
@@ -1,27 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <style>
-        .title {
-            font-size: 24px;
-            text-decoration: underline;
-            text-align: center;
-            line-height: 2;
-        }
-        .heading1 {
-            font-size: 20px;
-            text-decoration: underline;
-            line-height: 1.8;
-        }
-        .heading2 {
-            font-size: 16px;
-            line-height: 1.8;
-        }
-        .body1 {
-            font-size: 14px;
-            line-height: 1.4;
-        }
-    </style>
+    <link rel="stylesheet" href="index.css">
     </head>
     <body>
     
