--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <div class="title"><strong>IIT Assignment 1</strong>
     </div>
     <div class="body1">
-    <a href="https://github.com/s3740073/s3740073.github.io">Github Repo</a>
-    <a href="https://s3740073.github.io/index.html">Github Pages</a>
+    <a href="https://github.com/s3740073/s3740073.github.io">Github Repo</a>: https://github.com/s3740073/s3740073.github.io
+    <br><a href="https://s3740073.github.io/index.html">Github Pages</a>: https://s3740073.github.io/index.html
     </div>
     <div></div>
     <hr>
