--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     &emsp;Jonathan Seah
     <br>&emsp;S3740073
     <br>&emsp;s3740073@student.rmit.edu.au
-    <br><img src="photo.jpg" alt="Personal Photo">
+    <br><img src="photo.jpg" alt="Personal Photo" width="160" height="145">
     </div>
     <div></div>
     <hr>
